After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 796981 - audiobuffersplit: Breaks the 1001/30000 pattern
audiobuffersplit: Breaks the 1001/30000 pattern
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal normal
: 1.15.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2018-08-16 17:48 UTC by Vivia Nikolaidou
Modified: 2018-08-17 13:40 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Vivia Nikolaidou 2018-08-16 17:48:49 UTC
How to reproduce:

gst-launch-1.0 -v audiotestsrc  ! audio/x-raw,rate=48000 ! netsim min-delay=-200 max-delay=200 delay-distribution=uniform delay-probability=0.2 !  audiobuffersplit output-buffer-duration=1001/30000 ! audiorate tolerance=0 ! audio/x-raw,rate=48000 ! audiobuffersplit output-buffer-duration=1001/30000 ! fakesink silent=false

Expected result:
Difference between two consecutive audio buffers follows this pattern:
0.033354166
0.033375
0.033354167
0.033375
0.033375

Observed result:
The pattern breaks after a while, giving streaks of 0.033354167 and/or streaks of 0.033375, then goes back to normal, then breaks again.
Comment 1 Vivia Nikolaidou 2018-08-16 17:50:02 UTC
Pattern becomes worse with:
gst-launch-1.0 -v audiotestsrc  ! audio/x-raw,rate=48000 ! netsim min-delay=-200 max-delay=200 delay-distribution=uniform delay-probability=0.2 !  audiobuffersplit ! audiorate tolerance=0 ! audio/x-raw,rate=48000 ! audiobuffersplit output-buffer-duration=1001/30000 ! fakesink silent=false
Comment 2 Sebastian Dröge (slomo) 2018-08-17 13:40:37 UTC
commit 186870d10ad58c2dc95f5f50a16f29bc1f47bd51
Author: Sebastian Dröge <sebastian@centricular.com>
Date:   Fri Aug 17 14:56:51 2018 +0300

    audiobuffersplit: Update output buffer size after each buffer to compensate for accumulated errors
    
    https://bugzilla.gnome.org/show_bug.cgi?id=796981