audiobuffersplit: Update output buffer size after each buffer to compensate for accumulated errors

https://bugzilla.gnome.org/show_bug.cgi?id=796981